--- a/client/app/package.json
+++ b/client/app/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.16.1",
     "axios": "^1.6.8",
     "font-awesome": "^4.7.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
